src/test/deca/context/invalid/test7_op_comp.deca
// Description:
//    Programme testant une mauvaise operation.
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : NON
//
// Resultats:
//	  test_context : erreur ligne 17 : Cannot compare string types.
//
// Historique:
//    cree le 09/01/2020

{
	int a;
	string b;
	a >= b;
}